Refactor getDifference to use Collections